--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Node.js CRUD API",
   "main": "main.js",
   "scripts": {
+    "start": "nodemon ./dist/main.js",
     "typescript": "tsc",
     "typescript-watch": "tsc --watch"
   },
@@ -24,5 +25,10 @@
   "homepage": "https://github.com/syauqeesy/node-crud#readme",
   "devDependencies": {
     "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "@types/express": "^4.17.21",
+    "express": "^4.18.2",
+    "nodemon": "^3.0.2"
   }
 }
