--- a/package.json
+++ b/package.json
@@ -24,11 +24,14 @@
   },
   "homepage": "https://github.com/syauqeesy/node-crud#readme",
   "devDependencies": {
+    "@types/express": "^4.17.21",
+    "nodemon": "^3.0.2",
     "typescript": "^5.3.3"
   },
   "dependencies": {
-    "@types/express": "^4.17.21",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "nodemon": "^3.0.2"
+    "mysql2": "^3.6.5",
+    "typeorm": "^0.3.17"
   }
 }
