chore: setup migration & create user table

--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
   "scripts": {
     "start": "nodemon ./dist/main.js",
     "typescript": "tsc",
-    "typescript-watch": "tsc --watch"
+    "typescript-watch": "tsc --watch",
+    "typeorm": "typeorm",
+    "migration-create": "typeorm migration:create",
+    "migration-up": "typeorm migration:run -d ./dist/migration.js",
+    "migration-down": "typeorm migration:revert -d ./dist/migration.js"
   },
   "repository": {
     "type": "git",
