--- a/package.json
+++ b/package.json
@@ -28,14 +28,18 @@
   },
   "homepage": "https://github.com/syauqeesy/node-crud#readme",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
+    "@types/uuid": "^9.0.7",
     "nodemon": "^3.0.2",
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mysql2": "^3.6.5",
-    "typeorm": "^0.3.17"
+    "typeorm": "^0.3.17",
+    "uuid": "^9.0.1"
   }
 }
