--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "joi": "^17.11.0",
     "mysql2": "^3.6.5",
     "typeorm": "^0.3.17",
     "uuid": "^9.0.1"
