--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/uuid": "^9.0.7",
     "nodemon": "^3.0.2",
     "typescript": "^5.3.3"
@@ -39,6 +40,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "joi": "^17.11.0",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.6.5",
     "typeorm": "^0.3.17",
     "uuid": "^9.0.1"
